# GitMaintainer

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PRIVACY.md  README.md  SECURITY.md  SUPPORT.md  pyproject.toml
.github/: labels.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml  privacy_review.yml
.github/workflows/: ci.yml
docs/: architecture.md  development.md  release.md  requirements.md  roadmap.md  v0.1-release-checklist.md  v0.1-release-notes.md  v0.1.1-release-notes.md
src/gitmaintainer/: __init__.py  badge.py  cli.py  github.py  models.py  scoring.py
tests/: test_cli.py  test_github.py  test_scoring.py
tests/fixtures/github/: Cargo.toml  comments_issue_1.json  comments_issue_2.json  commits_page_1.json  commits_page_2.json  composer.json  contents.json  go.mod  issues.json  package.json  pulls.json  releases.json  repository.json  requirements.txt
